2025-12-15T12:23:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20232050696 # 1367
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
* notice: last 14d: unq all: 49 85
* notice: prev accum: outdated-unq outdated-all / unq all: 3039 5437 / 3093 5521
* notice: next accum: outdated-unq outdated-all / unq all: 3039 5437 / 3095 5523
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-01 2025-12-15]

2025-12-15T00:56:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20217050464 # 1366
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
* notice: last 14d: unq all: 48 84
* notice: prev accum: outdated-unq outdated-all / unq all: 3038 5436 / 3088 5515
* notice: next accum: outdated-unq outdated-all / unq all: 3039 5437 / 3093 5521
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +7 +8 -0 -0 / 7 8
* notice: removed / changed dates: [2025-11-30] / [2025-12-14]

2025-12-14T12:19:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20207848077 # 1365
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-14
* notice: last 14d: unq all: 45 79
* notice: prev accum: outdated-unq outdated-all / unq all: 3038 5436 / 3086 5513
* notice: next accum: outdated-unq outdated-all / unq all: 3038 5436 / 3088 5515
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-14]

2025-12-14T00:58:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20200379989 # 1364