@@ -1,12 +1,7 @@
 {
-  "count": 85,
-  "uniques": 49,
+  "count": 81,
+  "uniques": 48,
   "clones": [
-    {
-      "timestamp": "2025-12-01T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-02T00:00:00Z",
       "count": 2,
