@@ -1,3 +1,12 @@
+2025-12-16T00:54:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20252712761 # 1368
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
+* notice: last 14d: unq all: 48 81
+* notice: prev accum: outdated-unq outdated-all / unq all: 3039 5437 / 3095 5523
+* notice: next accum: outdated-unq outdated-all / unq all: 3041 5442 / 3095 5523
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-01] / []
+
 2025-12-15T12:23:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20232050696 # 1367
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
